--- a/css/style.css
+++ b/css/style.css
@@ -38,18 +38,25 @@
     font-display: swap;
 }
 
-.container {
-    max-width: 1180px;
-    margin: 0 auto;
+body {
+background-color: #0ee3e3;
 }
 
-.header {
+.header{
+ background-color: #0ee3e3;
+}
+.header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-top: 25px;
     padding-bottom: 20px;
 }
+.container {
+    max-width: 1180px;
+    margin: 0 auto;
+}
+
 
 .nav-link {
     position: relative;
@@ -157,12 +164,15 @@
     background: #e5ffa5;
 }
 
+
 .hero-right {
     position: relative;
     overflow: hidden;
     height: 40.9375rem;
     padding: 0 2.3125rem;
-    animation: y-scroll 45s linear infinite;
+    animation: y-scroll 15s linear infinite alternate;
+    z-index: -1;
+    margin: 0px 50px 0px 0px;
 }
 
 .hero-right::before {
@@ -268,6 +278,6 @@
     }
 
     to {
-        transform: translateY(calc(-100% - 30px))
+        transform: translateY(calc(-100% - 0px))
     }
 }
